--- a/frontend/components/tree/pug/tree.pug
+++ b/frontend/components/tree/pug/tree.pug
@@ -57,8 +57,15 @@ div(class="virtualRepeatInfiniteScroll" ng-if="vm.showFilterList && vm.filterIte
 		.treeNodes.filterNode.repeated-item(md-virtual-repeat="item in vm.nodes")
 			// Name
 			div(layout="row", layout-align="start center", flex)
-				div(flex, layout="row", layout-align="start center")
-					p.filterListNodeName(ng-click="vm.filterItemSelected(item)", ng-class="item.class") {{item.name}}
+				div(
+					flex, 
+					layout="row", 
+					layout-align="start center"
+					ng-class="item.class"
+					ng-click="vm.filterItemSelected(item)")
+
+					p.filterListNodeName {{item.name}}
+
 				// Toggle visibility
 				//md-button.md-icon-button.md-primary.toggleButton(aria-label="Toggle Visible", ng-click="vm.toggleFilterNode(item)")
 					md-icon.angular-material-icons(aria-label="Visible", ng-if="item.toggleState==='visible'") visibility
