ISSUE #583 - Fix expanding resizing incorrectly sometimes

--- a/frontend/components/tree/css/tree.css
+++ b/frontend/components/tree/css/tree.css
@@ -97,3 +97,9 @@ tree .filterNode div {
 tree .filterListNodeName {
   margin-left: 15px !important;
 }
+
+
+tree .virtual-repeat-full-height {
+  height: 100%;
+  position: initial;
+}
