--- a/frontend/components/tree/pug/tree.pug
+++ b/frontend/components/tree/pug/tree.pug
@@ -3,7 +3,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
 // Tree
 .virtualRepeatInfiniteScroll(ng-show="vm.showTree")
-	md-virtual-repeat-container.vertical-container(md-top-index="vm.topIndex", ng-show="vm.showNodes")
+	md-virtual-repeat-container.vertical-container.virtual-repeat-full-height(md-top-index="vm.topIndex", ng-show="vm.showNodes")
 
 		.treeNodes.repeated-item(id="{{item._id}}" md-virtual-repeat="item in vm.nodesToShow")
 			.treeNode(
