--- a/frontend/components/issues/pug/issue-screen-shot.pug
+++ b/frontend/components/issues/pug/issue-screen-shot.pug
@@ -16,14 +16,15 @@ md-content#issueScreenShotContent(layout="row", layout-align="center center")
 			style="pointer-events:{{vm.actionsPointerEvents}}")
 
 			md-container.colorContainer
-				md-select(
-					ng-selected="vm.penCol"
-					ng-disabled="vm.isEraseMode"
+				md-select.penColor(
 					ng-model="vm.penCol")
 
 					md-option(
-						value="{{value.color}}"
-						ng-repeat="(key, value) in vm.penColors") {{value.label}}
+						ng-repeat="(key, value) in vm.penColors"
+						ng-show="key !== 'eraser' || (vm.isEraserMode && key === 'eraser')"
+						ng-disabled="vm.isEraseMode"
+						ng-selected="value.color === vm.penCol"
+						value="{{value.color}}") {{value.label}}
 
 			div.sizeContainer(layout="row" flex layout-align="center center")
 				md-slider(
@@ -36,19 +37,19 @@ md-content#issueScreenShotContent(layout="row", layout-align="center center")
 					ng-change="vm.changePenSize()")
 
 			md-button.md-icon-button(
-				ng-repeat="action in vm.actions"
-				aria-label="{{action.icon}}"
-				ng-click="vm.doAction($index)")
+				ng-repeat="(action, actionValue) in vm.actions"
+				aria-label="{{actionValue.icon}}"
+				ng-click="vm.doAction(action)")
 
-					md-tooltip(md-direction="bottom") {{action.label}}
+					md-tooltip(md-direction="bottom") {{actionValue.label}}
 
 					md-icon.angular-material-icons(
-						ng-if="action.icon.indexOf('fa fa-') === -1"
-						style="color:{{action.color}}") {{action.icon}}
+						ng-if="actionValue.icon.indexOf('fa fa-') === -1"
+						style="color:{{actionValue.color}}") {{actionValue.icon}}
 					md-icon#issueScreenShotFAIcon(
-						ng-if="action.icon.indexOf('fa fa-') !== -1"
+						ng-if="actionValue.icon.indexOf('fa fa-') !== -1"
 						class="fa fa-eraser"
-						style="color:{{action.color}}")
+						style="color:{{actionValue.color}}")
 
 			md-button.md-fab.md-mini(
 				id="saveCommentScreenshot"
