ISSUE #654 - WIP fixes for compare tool

--- a/frontend/components/compare/css/compare.css
+++ b/frontend/components/compare/css/compare.css
@@ -36,6 +36,10 @@ compare .compareVisibility {
     background-color: #eeeeee;
 } */
 
+md-menu-content .selectedRev {
+    font-weight: bold;
+}
+
 md-menu-content .authorDate {
     color: #a6a6a6 !important;
 }
