--- a/frontend/components/panel/pug/panel-card.pug
+++ b/frontend/components/panel/pug/panel-card.pug
@@ -102,6 +102,7 @@ div(layout="column", class="md-whiteframe-1dp")
 			compare(
 				model-settings='vm.modelSettings'
 				account='vm.account'
+				revision='vm.revision'
 				model='vm.model'
 				ng-if="vm.contentData.type === 'compare'")
 
