--- a/frontend/components/bottom-buttons/pug/bottom-buttons.pug
+++ b/frontend/components/bottom-buttons/pug/bottom-buttons.pug
@@ -22,7 +22,7 @@ div(
 					path(fill="#ffffff" d={{vm.customIcons.isolate1}})
 					path(fill="#ffffff" d={{vm.customIcons.isolate2}})
 				svg(ng-if="button.label === 'Focus'"
-					width="24px" height="24px" viewBox="0 0 24 24")
+					width="100%" height="100%" viewBox="0 0 24 24")
 					path(fill="#ffffff" d={{vm.customIcons.focus1}})
 				// HELICOPTER
 				svg(ng-if="vm.selectedMode === 'Helicopter' && button.isViewingOptionButton"
