ISSUE #666 - Fix federation editing

--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -109,7 +109,10 @@
 											federations-saving="vm.federationsSaving"
 											project="project"
 											account="account"
+											error-dialog="vm.errorDialog",
+											cancel-federation-changes="vm.cancelFederationChanges",
 											is-saving="vm.isSaving"
+											reset-viewable-cache="vm.resetViewableCache"
 											federation-data="vm.federationData"
 											original-federation-data="vm.originalFederationData"
 											setup-federation-data="vm.setupFederationData"
