--- a/frontend/components/bottom-buttons/pug/bottom-buttons.pug
+++ b/frontend/components/bottom-buttons/pug/bottom-buttons.pug
@@ -35,6 +35,7 @@ div(
 					width="24px" height="24px" viewBox="0 0 24 24")
 					path(fill="#ffffff" d=customIcons.isolate1)
 					path(fill="#ffffff" d=customIcons.isolate2)
+
 				// HELICOPTER
 				svg(ng-if="vm.selectedMode === 'Helicopter' && button.isViewingOptionButton"
 					width="60%"
@@ -58,18 +59,17 @@ div(
 			.viewingOptionButtonHolder
 				.viewingOptionButtons(
 					layout="column"
-					ng-if="vm.showViewingOptionButtons && button.isViewingOptionButton"
+					ng-if="vm.showViewingOptions && button.isViewingOptionButton"
 					layout-align="center center")
 
 					md-button.md-fab.md-mini.md-icon-button.md-accent.md-ink-ripple.actionButton(
 						ng-repeat="(mode, value) in vm.viewingOptions"
 						ng-if="mode !== vm.selectedMode"
-						ng-click="vm.setViewingOption(mode)" 
+						ng-click="vm.setViewingOption(mode);"
 						aria-label="{{mode}}")
 	
 						// HELICOPTER
 						svg(ng-if="mode === 'Helicopter'"
-							ng-click="vm.setViewingOption(mode)" 
 							width="60%"
 							xmlns="http://www.w3.org/2000/svg" 
 							viewBox="0 0 18 10.42")
@@ -77,7 +77,6 @@ div(
 					
 						// TURNTABLE
 						svg(ng-if="mode === 'Turntable'"
-							ng-click="vm.setViewingOption(mode)"
 							width="60%"
 							xmlns="http://www.w3.org/2000/svg" 
 							viewBox="0 0 23.94 22.46")
