--- a/frontend/components/compare/pug/compare.pug
+++ b/frontend/components/compare/pug/compare.pug
@@ -57,15 +57,19 @@ div(
 							ng-repeat="model in compareType[vm.modelType + 'Models'] track by $index") 
 
 							div.md-padding.compareModel(layout="row", layout-align="start center")
+								
 								md-button.modelSides.compareVisibility(
 									ng-if="vm.isFederation()"
 									ng-click="vm.toggleModelVisibility(model)")
-									md-icon.angular-material-icons.visible(ng-if="model.visible") visibility
-									md-icon.angular-material-icons(ng-if="!model.visible") visibility_off
+									md-icon.angular-material-icons.visible(ng-if="!model.visible") visibility
+									md-icon.angular-material-icons.visible(ng-if="model.visible === 'visible'") visibility
+									md-icon.angular-material-icons.visible(ng-if="model.visible === 'invisible'") visibility_off
+									md-icon.angular-material-icons.parentOfInvisible(ng-if="model.visible === 'parentOfInvisible'") visibility_off
 									md-tooltip(md-direction="bottom") Visibility in {{compareType.label}}
+								
 								md-button.modelSides.compareVisibility(
 									ng-if="!vm.isFederation()")
-									md-icon.angular-material-icons(ng-if="model.visible") block
+									md-icon.angular-material-icons() block
 									md-tooltip(md-direction="bottom") Visibility toggling not available on models
 
 
