--- a/frontend/components/tree/css/tree.css
+++ b/frontend/components/tree/css/tree.css
@@ -80,8 +80,16 @@ tree .toggleButton {
   margin-right: 0 !important;
 }
 
-tree .parentOfInvisible {
+tree .visible {
+  color: #0c2f54;
+}
+
+tree .invisible {
   color: #999 !important;
+}
+
+tree .parentOfInvisible {
+  color: #6788ab !important;
 }
 
 /** Tree filter list **************************************************************************************************/
