ISSUE #674 - Fix tree loading not appearing

--- a/frontend/components/tree/pug/tree.pug
+++ b/frontend/components/tree/pug/tree.pug
@@ -1,5 +1,5 @@
 // Progress
-tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
+tdr-progress(ng-if="vm.showProgress" info="vm.progressInfo")
 
 // Tree
 .virtualRepeatInfiniteScroll(ng-if="!vm.showProgress", ng-show="vm.showTree")
