ISSUE #679 - Use a password strength library to prevent weak passwords

--- a/frontend/components/sign-up/css/sign-up.css
+++ b/frontend/components/sign-up/css/sign-up.css
@@ -38,6 +38,12 @@ sign-up .sign-up-button {
     width: 80%;
 }
 
+sign-up .free {
+    color: #585858;
+    margin: 5px;
+    margin-bottom: 25px;
+}
+
 sign-up .sign-up-button md-progress-circular {
     display: inline-block;
     vertical-align: middle;
