ISSUE #680 - Scroll list keeps the target/base header, add default state of compare loading to false

--- a/frontend/components/compare/css/compare.css
+++ b/frontend/components/compare/css/compare.css
@@ -63,6 +63,10 @@ compare .revisionText {
     color: grey;
 }
 
+compare .modelListHolder {
+    height: calc(100% - 39px);
+}
+
 compare .modelText {
     margin: 0;
     margin-bottom: 10px;
