ISSUE #682 - Project deletion message

--- a/frontend/components/account/pug/delete-project-dialog.pug
+++ b/frontend/components/account/pug/delete-project-dialog.pug
@@ -11,7 +11,7 @@ md-dialog.deleteDialog(aria-label="Delete Project")
 				p
 					| Do you really want to delete project
 					=" "
-					span#deleteName {{vm.projectData.projectDeleteName}}?
+					span#deleteName {{vm.projectData.deleteName}}?
 				br
 				p#deleteWarning {{vm.projectData.deleteWarning}}
 			md-input-container
