--- a/frontend/components/compare/pug/compare.pug
+++ b/frontend/components/compare/pug/compare.pug
@@ -19,10 +19,10 @@ div(
 				label="{{compareType.label}}")
 
 				div.modelTypeSelection(
-						id="{{compareType.type + 'ModelTypeSection'}}"
-						ng-if="!vm.isModelClash(compareType.type)"
-						layout="row"
-						layout-align="center center")
+					ng-if="!vm.isModelClash(compareType.type)"
+					id="{{compareType.type + 'ModelTypeSection'}}"
+					layout="row"
+					layout-align="center center")
 
 						div.modelType(
 							ng-click="vm.setModelType('base')"
@@ -40,11 +40,10 @@ div(
 							span(ng-if="vm.isFederation()") Target models
 							span(ng-if="!vm.isFederation()") Target model
 
-				md-content.modelListHolder(flex)
+				md-content(flex, ng-if="vm.isModelClash(compareType.type)")
+					h3.selfDiffWarning Model can't clash with itself! Try differencing with a revision.
 
-					#modelsList
-						div(ng-if="vm.isModelClash(compareType.type)")
-							h3.selfDiffWarning Model can't clash with itself! Try differencing with a revision.
+				md-content.modelListHolder(flex, ng-if="!vm.isModelClash(compareType.type)")
 
 						div(ng-if="vm.loadingComparision")
 							tdr-progress(
