ISSUE #683 - Comment out 3D Clash code

--- a/frontend/components/compare/css/compare.css
+++ b/frontend/components/compare/css/compare.css
@@ -58,6 +58,12 @@ compare .selfDiffWarning {
 compare .modelTypeSelection {
 }
 
+/** TODO: Delete this when we bring back clash **/
+compare md-pagination-wrapper md-tab-item {
+    width: 100% !important;
+    max-width: initial !important;
+}
+
 compare .revisionText {
     font-size: 12px;
     color: grey;
