ISSUE #680 - WIP towards better mobile support

--- a/frontend/components/account/pug/account.pug
+++ b/frontend/components/account/pug/account.pug
@@ -1,4 +1,8 @@
-account-menu(account="vm.account")
+account-menu(
+	account="vm.account"
+	is-mobile-device="vm.isMobileDevice"
+	show-lite-mode-button="vm.showLiteModeButton")
+
 div#accountHolder(
 	layout="row"
 	flex="100"
