ISSUE #680 - WIP further work on mobile mode

--- a/frontend/components/account/pug/account-menu.pug
+++ b/frontend/components/account/pug/account-menu.pug
@@ -17,7 +17,7 @@ md-menu#accountMenu(md-position-mode="target-right target")
 		md-menu-item(ng-if="vm.showLiteModeButton")
 			md-button()
 				md-switch(ng-model="vm.isLiteMode" aria-label="Lite Mode")
-					p Lite Mode: 
+					p Lite Mode
 
 		md-menu-item
 			md-button(ng-click="vm.logout()")
