--- a/frontend/components/tree/pug/tree.pug
+++ b/frontend/components/tree/pug/tree.pug
@@ -1,8 +1,8 @@
 // Progress
-tdr-progress(ng-if="vm.showProgress" info="vm.progressInfo")
+tdr-progress(ng-show="vm.showProgress" info="vm.progressInfo")
 
 // Tree
-.virtualRepeatInfiniteScroll(ng-if="!vm.showProgress", ng-show="vm.showTree")
+.virtualRepeatInfiniteScroll(ng-show="!vm.showProgress && vm.showTree")
 	md-virtual-repeat-container.vertical-container.virtual-repeat-full-height(
 		md-top-index="vm.topIndex"
 		ng-show="vm.showNodes")
