ISSUE #685 - Attempt to fix travis

--- a/frontend/components/account/pug/account.pug
+++ b/frontend/components/account/pug/account.pug
@@ -1,7 +1,7 @@
 account-menu(
 	account="vm.account"
-	is-mobile-device="vm.isMobileDevice"
-	show-lite-mode-button="vm.showLiteModeButton")
+	is-mobile-device="vm.isMobileDevice")
+	//show-lite-mode-button="vm.showLiteModeButton")
 
 div#accountHolder(
 	layout="row"
