--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -32,10 +32,10 @@ div.homeContainer(
 			account='vm.state.account'
 			state='vm.state'
 			query='vm.query'
-			show-lite-mode-button="vm.showLiteModeButton"
 			is-mobile-device="vm.isMobileDevice"
 			keys-down="vm.keysDown"
 			ng-if="vm.loggedIn")
+			//show-lite-mode-button="vm.showLiteModeButton"
 
 	#homeLegalContainer(
 		flex="100"
