ISSUE #680 - WIP towards tablet support

--- a/frontend/components/account/pug/account-menu.pug
+++ b/frontend/components/account/pug/account-menu.pug
@@ -14,7 +14,7 @@ md-menu#accountMenu(md-position-mode="target-right target")
 			md-button(ng-click="vm.openUserManual()")
 				md-icon.angular-material-icons(md-menu-align-target) description
 				| User Manual
-		//md-menu-item(ng-if="vm.showLiteModeButton")
+		md-menu-item
 			md-button()
 				md-switch(ng-model="vm.isLiteMode" aria-label="Lite Mode")
 					p Lite Mode
