--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -8,8 +8,6 @@ div.homeContainer(
 	viewer(
 		id="viewer"
 		ng-if="!vm.isMobileDevice && !vm.isLegalPage"
-		hide-xs
-		hide-sm
 		node="node"
 		account="vm.state.account"
 		model="vm.state.model"
@@ -34,8 +32,8 @@ div.homeContainer(
 			query='vm.query'
 			is-mobile-device="vm.isMobileDevice"
 			keys-down="vm.keysDown"
-			ng-if="vm.loggedIn")
-			//show-lite-mode-button="vm.showLiteModeButton"
+			ng-if="vm.loggedIn"
+			show-lite-mode-button="vm.showLiteModeButton")
 
 	#homeLegalContainer(
 		flex="100"
